--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -1903,3 +1903,211 @@ public:
 
 少见的题目，积累一下吧，就是这个给出的edge数组，虽然表示e[0]对e[1]有一条有向边，但是在这一题中还有一种表示，就是出度点和入度点，所以这一题我们只需要遍历edge数组统计到哈希集合中，然后再遍历点，看有多少不是在集合中的，不在集合中就表明这是一个入度为0的点
 
+
+
+##  1514.概率最大的路径(Dijkstra堆优化)
+
+```cpp
+class Solution {
+public:
+    double maxProbability(int n, vector<vector<int>>& edges, vector<double>& succProb, int start_node, int end_node) {
+        vector<vector<pair<int, double>>> adj(n);
+        for(int i = 0; i < edges.size(); i++) {
+            int u = edges[i][0], v = edges[i][1];
+            double w = succProb[i];
+            adj[u].emplace_back(v, w);
+            adj[v].emplace_back(u, w);
+        }
+        priority_queue<pair<double, int>> pq;
+        vector<double> dis(n, 0);
+        dis[start_node] = 1;
+        pq.emplace(1, start_node);
+        while(!pq.empty()) {
+            auto [dx, x] = pq.top();
+            pq.pop();
+            if(dx < dis[x]) continue;
+            for(auto& [y, d] : adj[x]) {
+                double new_dis = dx*d;
+                if(new_dis > dis[y]) {
+                    dis[y] = new_dis;
+                    pq.emplace(new_dis, y);
+                }
+            }
+        }
+        return dis[end_node];
+    }
+};
+```
+
+Dijkstra通常是用最小堆解决最短路径问题，求最小的问题就用最小堆来维护，而这一题恰恰相反，求的答案是概率最大，所以这里是用大根堆来维护的，然后就是正常的一些将小于号变成大于号，这样就把这道题解决了
+
+
+
+##  2140.解决智力问题(记忆化dfs、dp)
+
+```cpp
+class Solution {
+public:
+    long long mostPoints(vector<vector<int>>& questions) {
+        int n = questions.size();
+
+        //状态定义 dfs(i), dp[i]表示解决区间[i,n-1]内的问题可以获得的最高分数
+
+        //dp
+        vector<long long> dp(n+1);
+        for(int i = n-1; i >= 0; i--) {
+            auto& q = questions[i];
+            int j = i+q[1]+1;
+            dp[i] = max(dp[i+1], q[0]+(j < n ? dp[j] : 0));
+        }
+        return dp[0];
+
+        //记忆化
+        vector<long long> memo(n, -1);
+        auto dfs = [&](auto&& dfs, int i) -> long long {
+            if(i >= n) return 0;
+            long long& res = memo[i];
+            if(res != -1) return res;
+            res = 0;
+            res = max(dfs(dfs, i+questions[i][1]+1)+questions[i][0], dfs(dfs, i+1));
+            return res;
+        };
+        return dfs(dfs, 0);
+    }
+};
+```
+
+自己独立写记忆化的时候第一次写错超时了，然后仔细分析了一下状态定义，稍微修改了一下之后还是顺利解决了
+
+
+
+##  983.最低票价(记忆化dfs、dp)
+
+```cpp
+class Solution {
+public:
+    int mincostTickets(vector<int>& days, vector<int>& costs) {
+        unordered_set<int> ust(days.begin(), days.end());
+        int n = days.back();
+
+        vector<int> dp(n+1);
+        for(int i = 1; i <= n; i++) {
+            if(ust.count(i) == 0) dp[i] = dp[i-1];
+            else dp[i] = min({dp[i-1]+costs[0], dp[max(i-7, 0)]+costs[1], dp[max(i-30, 0)]+costs[2]});
+        }
+        return dp[n];
+
+        vector<int> memo(n+1, -1);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            if(i < 1) return 0;
+            int& res = memo[i];
+            if(res != -1) return res;
+            if(ust.count(i) == 0) return res = dfs(dfs, i-1);
+            return res = min({dfs(dfs, i-1)+costs[0], dfs(dfs, i-7)+costs[1], dfs(dfs, i-30)+costs[2]});
+        };
+        return dfs(dfs, n);
+    }
+};
+```
+
+思路是枚举选哪个，dfs(i)定义为1到第i天的最小花费
+
+
+
+##  2501.数组中最长的方波(记忆化搜索)
+
+```cpp
+class Solution {
+public:
+    int longestSquareStreak(vector<int>& nums) {
+        unordered_set<int> ust(nums.begin(), nums.end());
+        int n = 1e5+5;
+        vector<int> memo(n, -1);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            int x = sqrt(i);
+            if(x*x != i || !ust.count(x)) return 1;
+            int& res = memo[i];
+            if(res != -1) return res;
+            res = 0;
+            return res = dfs(dfs, x)+1;
+        };
+        int ans = 0;
+        for(auto& x : ust) {
+            ans = max(ans, dfs(dfs, x));
+        }
+        return ans > 1 ? ans : -1;
+    }
+};
+```
+
+自己写的记忆化搜索超时了，大概也是发现了问题，我想到的是枚举选哪个的方法，但是仔细一想，我每次枚举选哪个都需要枚举整个数组元素，这样枚举确实很慢，超时也就理所应当了。题解是给出的利用哈希集合来O1的查找，确实就快很多了，所以在思考枚举选哪个的时候可以先看看你是枚举的范围在哪，如果每次枚举选哪个的范围是整个数组那么其实和On^2的思路没什么区别了
+
+
+
+##  1218.最长定差子序列(dp)
+
+```cpp
+class Solution {
+public:
+    int longestSubsequence(vector<int>& arr, int difference) {
+        unordered_map<int, int> hash;
+        int ans = 0;
+        for(int& a : arr) {
+            hash[a] = hash[a-difference]+1;
+            ans = max(ans, hash[a]);
+        }
+        return ans;
+    }
+};
+```
+
+自己的代码又臭又长还写不对，一看题解只有4行。。。原来hash表还能充当dp数组，真是妙到家了
+
+
+
+##  2601.质数减法运算(贪心、二分、质数筛预处理)
+
+```cpp
+const int N = 1000;
+vector<int> isPrime(N+1, true);
+vector<int> primes{0};  //防止二分查找下标溢出
+
+int init = []() -> int {
+    for(int i = 2; i <= N; i++) {
+        if(isPrime[i]) {
+            primes.push_back(i);
+            for(int j = i; j <= N/i; j++) {
+                isPrime[i*j] = false;
+            }
+        }
+    }
+    return 0;
+}();
+
+class Solution {
+public:
+
+    int lowerBound(vector<int>& nums, int target) {
+        int l = -1, r = nums.size();
+        while(l+1 < r) {
+            int m = l+(r-l)/2;
+            if(nums[m] >= target) r = m;
+            else l = m;
+        }
+        return r;
+    }
+
+    bool primeSubOperation(vector<int>& nums) {
+        int pre = 0;
+        for(int& x : nums) {
+            if(x <= pre) return false;
+            int idx = lowerBound(primes, x-pre)-1;
+            pre = x-primes[idx];
+        }
+        return true;
+    }
+};
+```
+
+这一题很考察不等式的概念，首先需要发现等式关系`p < x-pre`，那么这个p就表示为小于x-pre的最大质数，所以可以用二分来求，也就是`lowerBound(x-pre)-1`，这样就定位到了它的下标。然后就是在二分过程中如果要找小于2的最大质数，按依照以前的写法就会返回下标-1会导致下标越界，所以这里设置了哨兵，也就是在初始化的时候多了一个占位的，这样在使用欧式筛的时候第二层循环j就要从1开始了
+
