自定义排序方式

--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1675,6 +1675,74 @@ void solve() {
 
 
 
+##  最近公共祖先lca
+
+```cpp
+const int N=5e5+10;
+
+int n, m, s, a, b;
+vector<vector<int>> e(N);
+vector<int> dep(N);
+vector<vector<int>> fa(N, vector<int>(20)); //fa[u][i]代表：起点u的前2^i层父亲节点
+
+//点的下标从1开始 根节点的父亲是0，作为哨兵
+void dfs(int u, int father) {
+    dep[u] = dep[father]+1;
+
+    //向上跳 1 2 4...
+    fa[u][0] = father;
+    for(int i = 1; i <= 19; i++) {
+        fa[u][i] = fa[fa[u][i-1]][i-1]; //倍增递推式
+    }
+
+    for(int v : e[u]) {
+        //无向树需要这步操作
+        if(v != father) dfs(v, u);
+    }
+}
+
+//查找u和v的最近公共祖先
+int lca(int u, int v) {
+    //保证u的深度大
+    if(dep[u] < dep[v]) swap(u, v);
+
+    //先跳到同一层
+    for(int i = 19; i >= 0; i--) {
+        if(dep[fa[u][i]] >= dep[v]) {
+            u = fa[u][i];
+        }
+    }
+    if(u == v) return v;    //同一层且跳到了相同节点直接返回
+    //再一次lca 保证循环结束后u的第一个父节点就是公共节点
+    for(int i = 19; i >= 0; i--) {
+        if(fa[u][i] != fa[v][i]) {
+            u = fa[u][i];
+            v = fa[v][i];
+        }
+    }
+    return fa[u][0];
+}
+
+void solve() {
+    cin >> n >> m >> s;
+    while(--n) {
+        int x, y;
+        cin >> x >> y;
+        e[x].push_back(y);
+        e[y].push_back(x);
+    }
+    dfs(4, 0);
+    while(m--) {
+        cin >> a >> b;
+        cout << lca(a, b) << endl;
+    }
+}
+```
+
+不知道为啥这段代码在洛谷爆内存了，也没检查出是哪里错了，但是样例还是能跑的，应该整体代码不会错，主要是理解这个找祖先的思维：先dfs预处理dep和fa数组，是从上往下的；lca是从下往上的
+
+
+
 
 
 
@@ -1732,3 +1800,27 @@ public:
 ```
 
 这是一道状态机dp题，但是遇到的错误点在move函数的使用上，我自己写的时候`int n = a.size()`写在了move函数的下一行，结果导致程序怎么跑都输出0，问题就是在move函数上，调用move函数就相当于全部放到这个c二维数组中了，我试了一下如果要在move函数之后正确初始化n的话应该写成`int n = c[0].size()`
+
+
+
+###  差分数组
+
+注意能够定义差分数组的长度，如果到了1e9的长度就得用`合并区间`的写法了。差分数组长度的定义一定要准确，搞清楚右边界是多少，一定要确保不会越界，通常最保险的长度就是n+2
+
+
+
+###  自定义排序方式
+
+```cpp
+//以vector<pair<int, int>>为例
+vector<pair<int, int>> t;
+sort(t.begin(), t.end(), [](auto& a, auto& b) {
+    //如果first不相等 按照first降序排列 
+    //如果first相等 按照second升序排列
+    if(a.first != b.first) {
+        return a.first > b.first;
+    }
+    return a.second < b.second;
+});
+```
+
