--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -730,6 +730,7 @@ else cout << "不是平方数";
 - `toupper(char c)` 字母小转大
 - `tolower(char c)` 字母大转小
 - `substr(i, len)`字符串截取，从下标i开始，截取len个字符
+- `s.find("abc") != s.npos`表示在字符串s中找到了字符串"abc"
 
 
 
