力扣周赛、双周赛、ABC、cf

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1163,6 +1163,135 @@ public:
 
 
 
+###  双周赛142
+
+####  3332.旅客可以得到的最多点数(记忆化搜索)
+
+```cpp
+class Solution {
+public:
+    int maxScore(int n, int k, vector<vector<int>>& stayScore, vector<vector<int>>& travelScore) {
+        vector<vector<int>> memo(k, vector<int>(n, -1));
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            if(i == k) return 0;
+            int& res = memo[i][j];
+            if(res != -1) return res;
+            res = 0;
+
+            //停留
+            res = dfs(dfs, i+1, j)+stayScore[i][j];
+
+            //前往 枚举选哪个
+            for(int d = 0; d < travelScore[j].size(); d++) {
+                res = max(res, dfs(dfs, i+1, d)+travelScore[j][d]);
+            }
+            return res;
+        };
+
+        int ans = 0;
+        for(int i = 0; i < n; i++) ans = max(ans, dfs(dfs, 0, i));
+        return ans;
+    }
+};
+```
+
+感觉记忆化搜索还是练少了。。。这一题感觉有种选或不选和枚举选哪个的结合版，两个思想都有涉及，可以停留可以不停留，不停留的情况要枚举前往哪一个
+
+
+
+
+
+###  周赛421
+
+####  数组的最大因子得分(前后缀分解、gcd、lcm)
+
+```cpp
+class Solution {
+public:
+    long long maxScore(vector<int>& nums) {
+        int n = nums.size();
+        vector<long long> suf_gcd(n+1), suf_lcm(n+1, 1);
+        for(int i = n-1; i >= 0; i--) {
+            suf_lcm[i] = lcm(suf_lcm[i+1], nums[i]);
+            suf_gcd[i] = gcd(suf_gcd[i+1], nums[i]);
+        }
+        long long ans = suf_gcd[0]*suf_lcm[0], pre_gcd = 0, pre_lcm = 1;
+        for(int i = 0; i < n; i++) {
+            ans = max(ans, gcd(pre_gcd, suf_gcd[i+1])*lcm(pre_lcm, suf_lcm[i+1]));
+            pre_gcd = gcd(pre_gcd, nums[i]);
+            pre_lcm = lcm(pre_lcm, nums[i]);
+        }
+        return ans;
+    }
+};
+```
+
+灵神处理边界值也很巧妙，首先是将后缀数组增加长度1，然后初始化gcd为0，lcm为1，这样就很好的处理了边界的情况了
+
+
+
+#### 最大公约数相等的子序列数量(记忆化搜索、dp)
+
+```cpp
+class Solution {
+public:
+    int subsequencePairCount(vector<int>& nums) {
+        int n = nums.size(), mod = 1e9+7, m = *max_element(nums.begin(), nums.end());
+
+        vector<vector<vector<int>>> f(n+1, vector<vector<int>>(m+1, vector<int>(m+1)));
+        for(int j = 1; j <= m; j++) f[0][j][j] = 1;
+        for(int i = 0; i < n; i++) {
+            int x = nums[i];
+            for(int j = 0; j <= m; j++) {
+                for(int k = 0; k <= m; k++) {
+                    f[i+1][j][k] = ((long long)f[i][j][k]+f[i][gcd(j,x)][k]+f[i][j][gcd(k,x)])%mod;
+                }
+            }
+        }
+        return f[n][0][0];
+
+        vector<vector<vector<long long>>> memo(n, vector<vector<long long>>(m+1, vector<long long>(m+1, -1)));
+        auto dfs = [&](auto&& dfs, int i, int j, int k) -> long long {
+            if(i < 0) return j == k;
+            long long& res = memo[i][j][k];
+            if(res != -1) return res;
+            int x = nums[i];
+            return res = (dfs(dfs, i-1, j, k)+dfs(dfs, i-1, gcd(j, x), k)+dfs(dfs, i-1, j, gcd(k, x)))%mod;
+        };
+        return (dfs(dfs, n-1, 0, 0)-1+mod)%mod;
+    }
+};
+```
+
+
+
+#### 字符串转换后的长度I(递推)
+
+```cpp
+class Solution {
+public:
+    int lengthAfterTransformations(string s, int t) {
+        int mod = 1e9+7;
+        vector<int> cnt(26, 0);
+        for(char c : s) cnt[c-'a']++;
+        for(int i = 1; i <= t; i++) {
+            vector<int> nxt(26);
+            for(int j = 0; j < 25; j++) nxt[j+1] = cnt[j];
+            nxt[0] = (nxt[0]+cnt[25])%mod;
+            nxt[1] = (nxt[1]+cnt[25])%mod;
+            for(int j = 0; j < 26; j++) cnt[j] = nxt[j];
+        }
+        int ans = 0;
+        for(int i = 0; i < 26; i++) ans = (ans+cnt[i])%mod;
+        return ans;
+    }
+};
+```
+
+
+
+
+
 
 
 
@@ -1977,6 +2106,103 @@ void solve() {
 
 
 
+### 周赛64
+
+#### D
+
+```cpp
+void solve() {
+    int a, b, c, d;
+    cin >> a >> b >> c >> d;
+    if(min(a+d, b+c)&1) cout << "kou\n";
+    else cout << "yukari\n";
+}
+```
+
+最优策略：对角线和小的两位变成0，奇数小红赢，偶数小紫赢
+
+
+
+#### E(鸽巢原理、构造)
+
+```cpp
+void solve() {
+    string s;
+    cin >> s;
+    int n = s.size();
+    int mx = 0;
+    for(char c = 'a'; c <= 'z'; c++) {
+        int cnt = count(s.begin(), s.end(), c);
+        mx = max(mx, cnt);
+    }
+    
+    //鸽巢原理 无解情况
+    if(mx > n/2) {
+        cout << "-1\n";
+        return;
+    }
+    vector<pair<char, int>> a;	//<字符，下标>
+    for(int i = 0; i < n; i++) a.emplace_back(s[i], i);
+    sort(a.begin(), a.end());
+    vector<char> ans(n);
+    for(int i = 0; i < a.size(); i++) {
+        auto [x, y] = a[i];
+        ans[y] = a[(i+mx)%n].first;	//偏移
+    }
+    for(int i = 0; i < n; i++) cout << ans[i];
+}
+```
+
+长见识了，首先是无解判断，再就是构造都很妙，构造主要是利用一定有解的特点然后将所有字符循环位移`(i+max)%n`。
+
+
+
+###  周赛65
+
+#### D
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<int> a(n), b(n);
+    for(int i = 0; i < n; i++) {
+        string s;
+        cin >> s;
+        for(int j = 0; j < m; j++) {
+            if(s[j] == '1') a[i] |= 1<<j;
+        }
+    }
+    int k;
+    cin >> k;
+    for(int i = 0; i < k; i++) {
+        string s;
+        cin >> s;
+        for(int j = 0; j < m; j++) {
+            if(s[j] == '1') b[i] |= 1<<j;
+        }
+    }
+
+    for(int i = 0; i < n; i++) {
+        int ans = 1e9;
+        for(int mask = 0; mask < (1<<k); mask++) {
+            int cnt = 0, x = 0;
+            for(int j = 0; j < k; j++) {
+                if(mask>>j&1) {
+                    cnt++;
+                    x |= b[j];
+                }
+            }
+            if((x&a[i]) == a[i]) ans = min(ans, cnt);
+        }
+        if(ans == 1e9) ans = -1;
+        cout << ans << "\n";
+    }
+}
+```
+
+
+
 
 
 
@@ -2431,4 +2657,111 @@ void solve() {
 ```
 
 没想到要用优先队列来解，看来优先队列的题得去学学了，看题的时候以为还是dp。题解的步骤是先将ai和bi放在pair里成对，然后先遍历前k-1一个元素用大根堆堆来维护bi，因为要求最小值，所以需要每次弹出最大值，所以用大根堆，这也达到了选子序列bi的效果，ai的话就是先排序，枚举最大i就行，感觉还是读题没读清楚，这个下标子集在ai和bi不是对应的，只是长度对应而已
+
+
+
+###   ABC.377
+
+#### C
+
+```cpp
+set<pair<int, int>> st;
+int n, m;
+
+void add(int x, int y) {
+    if(x >= 1 && x <= n && y >= 1 && y <= n) {
+        st.insert({x, y});
+    }
+}
+
+void solve() {
+    
+    cin >> n >> m;
+    
+    while(m--) {
+        int a, b;
+        cin >> a >> b;
+        add(a, b);
+        add(a+2, b+1);
+        add(a+1, b+2);
+        add(a-1, b+2);
+        add(a-2, b+1);
+        add(a-2, b-1);
+        add(a-1, b-2);
+        add(a+1, b-2);
+        add(a+2, b-1);
+    }
+    ll ans = (ll)n*n-st.size();
+    cout << ans;
+    
+}
+```
+
+n的范围在1e9，不能开数组，会爆内存。方法：正难则反，空位置=总位置-非法位置，用set来保存非法位置的下标来达到去重的目的
+
+
+
+#### D(双指针、模拟)
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<pair<int, int>> intervals;
+    for(int i = 0; i < n; i++) {
+        int l, r;
+        cin >> l >> r;
+        intervals.emplace_back(l, r);
+    }
+    sort(intervals.begin(), intervals.end());
+    int p = intervals.size()-1, min_r = m+1;    //min_r是开区间
+    long long ans = 0;
+    for(int l = m; l >= 1; l--) {
+        while(p >= 0 && intervals[p].first >= l) {
+            min_r = min(intervals[p].second, min_r);
+            p--;
+        }
+        ans += min_r-l;
+    }
+    cout << ans;
+}
+```
+
+感觉是比较偏思维的题目，主要是需要发现这样一个性质，或者说是规律吧
+
+
+
+
+
+
+
+##  Codeforces
+
+###  round981.div3
+
+####  b
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<vector<int>> a(n, vector<int>(n));
+    for(int i = 0; i < n; i++) {
+        for(int j = 0; j < n; j++) {
+            cin >> a[i][j];
+        }
+    }
+    vector<int> t(2*n);
+    for(int i = 0; i < n; i++) {
+        for(int j = 0; j < n; j++) {
+            int x = i-j+n;  //主对角线的特点i-j相等 加上n防止下标出现负数
+            t[x] = min(t[x], a[i][j]);
+        }
+    }
+    int ans = -accumulate(t.begin(), t.end(), 0);
+    cout << ans << "\n";
+}
+```
+
+主要考矩阵中主对角线的特点：i-j都相等，顺便总结一下副对角线的特点：i+j都相等。然后这里用数组t来保存每一主对角线的最小值，最后的答案就是求和取反就是最后的最少操作次数
 
