--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1744,6 +1744,28 @@ void solve() {
 
 
 
+##  前后缀分解
+
+通常解决形如删掉其中某一个数，然后要求其它的和或者积之类的，总之相当于要枚举断点i，求i前面的什么东西和i后面的什么东西。写法有不同，但是大致意思 都是一样的，都需要预处理pre和suf，只不过有的时候是和数组下标同步，有的时候会写成下标有偏移量，总之要弄明白意思。以238.除自身以外数组的乘积为例
+
+```cpp
+class Solution {
+public:
+    vector<int> productExceptSelf(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> pre(n, 1), suf(n, 1), ans(n);
+        for(int i = n-2; i >= 0; i--) suf[i] = suf[i+1]*nums[i+1];
+        for(int i = 1; i < n; i++) pre[i] = pre[i-1]*nums[i-1];
+        for(int i = 0; i < n; i++) ans[i] = pre[i]*suf[i];
+        return ans;
+    }
+};
+```
+
+
+
+
+
 
 
 
@@ -1825,3 +1847,6 @@ sort(t.begin(), t.end(), [](auto& a, auto& b) {
 });
 ```
 
+
+
+1111
