--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -2765,3 +2765,47 @@ void solve() {
 
 主要考矩阵中主对角线的特点：i-j都相等，顺便总结一下副对角线的特点：i+j都相等。然后这里用数组t来保存每一主对角线的最小值，最后的答案就是求和取反就是最后的最少操作次数
 
+
+
+### EC Round171.div2
+
+#### B
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<ll> a(n);
+    for(ll& ai : a) cin >> ai;
+    ll ans = 1e18;
+    auto update = [&](vector<ll> a) -> void {
+        ll res = 0;
+        sort(a.begin(), a.end());
+        for(int i = 1; i < n; i++) {
+            if(a[i] == a[i-1]) return;
+        }
+        for(int i = 0; i < n; i+=2) {
+            res = max(a[i+1]-a[i], res);
+        }
+        ans = min(ans, res);
+    };
+ 
+    if(n%2 == 0) {
+        update(a);
+        cout << ans << "\n";
+        return;
+    }
+ 
+    for(int i = 0; i < n; i++) {
+        for(int x : {-1, 1}) {
+            a.push_back(a[i]+x);
+            update(a);
+            a.pop_back();
+        }
+    }
+    cout << ans << "\n";
+}
+```
+
+有点贪心+模拟的味道，注意update传入的数组a不是引用类型，
+
