--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1849,4 +1849,7 @@ sort(t.begin(), t.end(), [](auto& a, auto& b) {
 
 
 
-1111
+###  前后缀分解如何确定数组长度
+
+在前后缀分解中确定数组长度，以及对应下标我觉得是最复杂的，如果想到了前后缀分解的解法很容易写出来，主要是下标对应和数组长度的初始化上我觉得是最让人头疼的。方法是看划分的范围：假设划分的范围是从[0, n-2]，所以前后缀数组最少就要定义成n，因为suf一般是suf[i+1]。然后就是搞清楚下标对应的含义，边界是包含还是不包含这很重要
+
