--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1853,3 +1853,34 @@ sort(t.begin(), t.end(), [](auto& a, auto& b) {
 
 在前后缀分解中确定数组长度，以及对应下标我觉得是最复杂的，如果想到了前后缀分解的解法很容易写出来，主要是下标对应和数组长度的初始化上我觉得是最让人头疼的。方法是看划分的范围：假设划分的范围是从[0, n-2]，所以前后缀数组最少就要定义成n，因为suf一般是suf[i+1]。然后就是搞清楚下标对应的含义，边界是包含还是不包含这很重要
 
+
+
+
+
+```cpp
+#include<bits/stdc++.h>
+ 
+using namespace std;
+ 
+#define INF 1e18;
+#define ll long long
+const int mod=998244353;
+const int N=2e5+10;
+
+
+void solve() {
+
+}
+ 
+ 
+signed main() {
+    ios_base::sync_with_stdio(0), cin.tie(0), cout.tie(0);
+    cout << fixed << setprecision(20); 
+ 
+    int t = 1;
+    //cin >> t;
+    while(t--) solve();
+    return 0;
+}
+```
+
