--- a/十月刷题笔记.md
+++ b/十月刷题笔记.md
@@ -2111,3 +2111,29 @@ public:
 
 这一题很考察不等式的概念，首先需要发现等式关系`p < x-pre`，那么这个p就表示为小于x-pre的最大质数，所以可以用二分来求，也就是`lowerBound(x-pre)-1`，这样就定位到了它的下标。然后就是在二分过程中如果要找小于2的最大质数，按依照以前的写法就会返回下标-1会导致下标越界，所以这里设置了哨兵，也就是在初始化的时候多了一个占位的，这样在使用欧式筛的时候第二层循环j就要从1开始了
 
+
+
+##  436.寻找右区间(二分查找)
+
+```cpp
+class Solution {
+public:
+    vector<int> findRightInterval(vector<vector<int>>& intervals) {
+        vector<pair<int, int>> t;
+        int n = intervals.size();
+        for(int i = 0; i < n; i++) {
+            t.emplace_back(intervals[i][0], i);
+        }
+        sort(t.begin(), t.end());
+        vector<int> ans(n, -1);
+        for(int i = 0; i < n; i++) {
+            auto it = lower_bound(t.begin(), t.end(), make_pair(intervals[i][1], 0));
+            if(it != t.end()) ans[i] = it->second;
+        }
+        return ans;
+    }
+};
+```
+
+用t来维护一个左边界和下标，然后遍历区间，二分查找是否存在大于等于`intervals[i][1]`的左边界，要求最小化，所以就是用lower_bound。这一题不熟悉就是在二分查找的时候是查找的一个pair，应该准确来说是pair的first，得保证是相同的容器，代表必须大于等于这一整个pair，以0为开始是因为数组下标从0开始
+
