--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1766,6 +1766,123 @@ public:
 
 
 
+##  拓扑排序
+
+这是图论中的应用，它有一个特点：只能先在队列中取出入度为0的点。以207.课程表为例，下面是给出广搜的大致模板
+
+```cpp
+class Solution {
+public:
+    bool canFinish(int numCourses, vector<vector<int>>& prerequisites) {
+        int n = numCourses;
+        vector<vector<int>> e(n);
+        vector<int> din(n);
+        queue<int> q;
+        for(auto p : prerequisites) {
+            e[p[1]].push_back(p[0]);
+            din[p[0]]++;
+        }
+        for(int i = 0; i < n; i++) {
+            if(din[i] == 0) q.push(i);
+        }
+
+        vector<int> vis;
+        while(!q.empty()) {
+            auto x = q.front();
+            q.pop();
+            vis.push_back(x);
+            for(auto y : e[x]) {
+                if(--din[y] == 0) {
+                    q.push(y);
+                }
+            }
+        }
+        return vis.size() == n;
+    }
+};
+```
+
+队列q用来保存入度为0的点，din[i]表示i的度为多少，e为邻接表。创建邻接表的时候要注意一下，搞清楚是从哪个点出的，从哪个点入的。
+
+
+
+##  组合数模板
+
+```cpp
+const int MOD = 1'000'000'007;
+const int MX = 2001;
+
+long long q_pow(long long x, int n) {
+    long long res = 1;
+    for (; n > 0; n /= 2) {
+        if (n % 2) {
+            res = res * x % MOD;
+        }
+        x = x * x % MOD;
+    }
+    return res;
+}
+
+// 组合数模板
+long long fac[MX], inv_fac[MX];
+
+auto init = [] {
+    fac[0] = 1;
+    for (int i = 1; i < MX; i++) {
+        fac[i] = fac[i - 1] * i % MOD;
+    }
+    inv_fac[MX - 1] = q_pow(fac[MX - 1], MOD - 2);
+    for (int i = MX - 1; i > 0; i--) {
+        inv_fac[i - 1] = inv_fac[i] * i % MOD;
+    }
+    return 0;
+}();
+
+long long comb(int n, int k) {
+    return fac[n] * inv_fac[k] % MOD * inv_fac[n - k] % MOD;
+}
+```
+
+
+
+```go
+const mod = 1_000_000_007
+const mx = 2000
+var F, invF [mx + 1]int
+
+func init() {
+	F[0] = 1
+	for i := 1; i <= mx; i++ {
+		F[i] = F[i-1] * i % mod
+	}
+	invF[mx] = pow(F[mx], mod-2)
+	for i := mx; i > 0; i-- {
+		invF[i-1] = invF[i] * i % mod
+	}
+}
+
+func pow(x, n int) int {
+	res := 1
+	for ; n > 0; n /= 2 {
+		if n%2 > 0 {
+			res = res * x % mod
+		}
+		x = x * x % mod
+	}
+	return res
+}
+
+func comb(n, k int) int {
+	return F[n] * invF[k] % mod * invF[n-k] % mod
+}
+```
+
+
+
+
+
+
+
 
 
 
@@ -1845,6 +1962,7 @@ sort(t.begin(), t.end(), [](auto& a, auto& b) {
     }
     return a.second < b.second;
 });
+sort(t.begin(), t.end())
 ```
 
 
