牛客月赛补题

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -2203,6 +2203,96 @@ void solve() {
 
 
 
+###  月赛104
+
+#### C
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<ll> a(n);
+    for(auto& ai : a) cin >> ai;
+
+    auto check = [&](ll x) -> bool {
+        ll mx = *max_element(a.begin(), a.end());
+        if(x >= mx) return true;
+        vector<ll> b(a.begin(), a.end());
+        for(ll& bi : b) bi = max(0LL, bi-x);
+        ll cnt = x;
+        for(int i = 0; i+1 < n; i++) {
+            if(b[i] > 0 && b[i+1] > 0) {
+                ll t = min({b[i], b[i+1], cnt});
+                b[i] -= t;
+                b[i+1] -= t;
+                cnt -= t;
+            }
+            if(cnt == 0) break;
+        }
+        return accumulate(b.begin(), b.end(), 0LL) <= cnt+x;
+    };
+
+    ll l = 0, r = 1e9+10;
+    while(l+1 < r) {
+        ll m = l+(r-l)/2;
+        (check(m) ? r : l) = m;
+    }
+    cout << r;
+}
+```
+
+赛时能想到用二分去做，主要是难在了不知道怎么写check函数，主要是相邻不好处理，这里是用到了贪心的想法，先处理操作一，再处理操作二，处理操作二的时候只要遇到了相邻的元素都大于0就可以相减，这样是最优的情况，最后再处理操作三，处理操作三的时候可能会有剩余的操作二，这里就可以加在一起了。然后check函数就是模拟这一个过程了。这样发掘力扣做的二分答案好像确实基础了一点。。。最后就是要注意的是在操作一的时候要`bi = max(0LL, bi-x);`，后面累加的时候出现负数就会错！这个数据也是给的不好，看了好久才看出来错的原因
+
+
+
+#### D
+
+是个矩阵模拟题，最后结果的计算上有点晕，题解在遍历上写的还是很妙的，也是粘下来吧~
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    vector<vector<int>> v(n * 2, vector<int>(n * 2));
+    for (auto &row : v)
+        for (auto &e : row) {
+            char c;
+            cin >> c;
+            e = c == 'X';
+        }
+    vector<vector<bool>> vis(n * 2, vector<bool>(n * 2));
+    static constexpr std::array<std::array<int, 2>, 4> dirs{{{0, 1}, {1, 0}, {0, -1}, {-1, 0}}};
+    int cost[4]{};
+    for (int d = 0, cnt = (n * 2 - 1) * 4; d < n; d++, cnt -= 8) {
+        vector<int> a;
+        int i = d, j = n, k = 0;
+        while (a.size() < cnt) {
+            vis[i][j] = true;
+            a.push_back(v[i][j]);
+            int i2, j2;
+            i2 = i + dirs[k][0];
+            j2 = j + dirs[k][1];
+            if (i2 < 0 or i2 >= n * 2 or j2 < 0 or j2 >= n * 2 or vis[i2][j2]) {
+                k = (k + 1) % 4;
+                i2 = i + dirs[k][0];
+                j2 = j + dirs[k][1];
+            }
+            i = i2, j = j2;
+        }
+        int pos = 0;
+        while (a[pos]) pos++;
+        while (!a[pos]) pos = (pos + 1) % a.size();
+        cost[0] += (0 + a.size() - pos) % a.size();
+        cost[1] += (a.size() / 4 + a.size() - pos) % a.size();
+        cost[2] += (a.size() / 2 + a.size() - pos) % a.size();
+        cost[3] += (a.size() * 3 / 4 + a.size() - pos) % a.size();
+    }
+    cout << min({cost[0], cost[1], cost[2], cost[3]});
+}
+```
+
+
+
 
 
 
@@ -2807,5 +2897,75 @@ void solve() {
 }
 ```
 
-有点贪心+模拟的味道，注意update传入的数组a不是引用类型，
+有点贪心+模拟的味道，注意update传入的数组a不是引用类型
 
+
+
+### 984.div3
+
+#### C
+
+```cpp
+void solve() {
+    string s;
+    cin >> s;
+
+    auto check = [&](int i) -> bool {
+        if(i < 0) return false;
+        if(i+3 >= s.size()) return false;
+        return s[i] == '1' && s[i+1] == '1' && s[i+2] == '0' && s[i+3] == '0';
+    };
+
+    int count = 0;
+    for(int i = 0; i < s.size(); i++) count += check(i);
+
+    int q;
+    cin >> q;
+    while(q--) {
+        int i;
+        char v;
+        cin >> i >> v;
+        i--;
+        int before = check(i) + check(i-1) + check(i-2) + check(i-3);
+        s[i] = v;
+        int after = check(i) + check(i-1) + check(i-2) + check(i-3);
+        count += after-before;
+        cout << (count ? "YES\n" : "NO\n");
+    }
+}
+```
+
+赛时其实是想到了这个写法，但是没有去写。。。字符串长度只有4，所以可以直接枚举四个位置，然后先预处理输入的字符串中有多少个1100，最后在每次修改的时候count的计算方法就是`count += after-before;`
+
+
+
+#### D
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<vector<char>> a(n, vector<char>(m));
+    for(int i = 0; i < n; i++) {
+        for(int j = 0; j < m; j++) {
+            cin >> a[i][j];
+        }
+    }
+    int cnt = 0;
+    for(int i = 0; (i+1)*2 <= min(n, m); i++) {
+        vector<char> t(n*m);
+        int pos = 0;
+        for(int j = i; j < m-i; j++) t[pos++] = a[i][j];
+        for(int j = i+1; j < n-i-1; j++) t[pos++] = a[j][m-i-1];
+        for(int j = m-i-1; j >= i; j--) t[pos++] = a[n-i-1][j];
+        for(int j = n-i-2; j >= i+1; j  --) t[pos++] = a[j][i];
+        
+        for(int j = 0; j < pos; j++) {
+            if(t[j] == '1' && t[(j+1)%pos] == '5' && t[(j+2)%pos] == '4' && t[(j+3)%pos] == '3') cnt++;
+        }
+    }
+    cout << cnt << "\n";
+}
+```
+
+矩阵模拟，属于是环形矩阵的遍历方式，重要的地方在于下标的处理和循环数组t的使用
