--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1391,7 +1391,7 @@ iota(uf.begin(), uf.end(), 0);
 
 //find
 auto find = [&](auto&& find, int x) -> int {
-    return x == uf[x] ? x : uf[x] = find(find, uf[x]);
+    return uf[x] == x ? uf[x] : uf[x] = find(find, uf[x]);
 };
 
 //union
@@ -1973,32 +1973,6 @@ sort(t.begin(), t.end())
 
 
 
+###  累和出现的错误
 
-
-```cpp
-#include<bits/stdc++.h>
- 
-using namespace std;
- 
-#define INF 1e18;
-#define ll long long
-const int mod=998244353;
-const int N=2e5+10;
-
-
-void solve() {
-
-}
- 
- 
-signed main() {
-    ios_base::sync_with_stdio(0), cin.tie(0), cout.tie(0);
-    cout << fixed << setprecision(20); 
- 
-    int t = 1;
-    //cin >> t;
-    while(t--) solve();
-    return 0;
-}
-```
-
+在使用accumulate或者reduce这种求和函数的时候需要注意参数必须都要是同种类型的，再就是一定得先预知你这个数组的元素正负情况，如果在前面有某个操作改变了你的数组出现了负数，然后又没有对负数和0取max这样会导致数组出现负数，从而导致累和的时候和预想答案不一样
