--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1292,6 +1292,126 @@ public:
 
 
 
+###  双周赛143
+
+#### 执行操作后的最高频率I&II(差分数组)
+
+```cpp
+class Solution {
+public:
+    int maxFrequency(vector<int>& nums, int k, int numOperations) {
+        map<int, int> diff;
+        unordered_map<int, int> cnt;
+        for(int& x : nums) {
+            cnt[x]++;
+            diff[x] += 0;
+            diff[x-k]++;
+            diff[x+k+1]--;
+        }
+        int ans = 0, sum = 0;
+        for(auto& [x, y] : diff) {
+            sum += y;
+            ans = max(ans, cnt[x]+min(sum-cnt[x], numOperations));
+        }
+        return ans;
+    }
+};
+```
+
+关键是要退出关系式`ans = max(ans, cnt[x]+min(sum-cnt[x], numOperations));`其余的就是差分数组的模板了，这一题k的范围到了1e9，所以差分数组要开map，为了确保map中要有x的存在，所以必须要有`diff[x] += 0;`
+
+
+
+###  周赛423
+
+#### 检测相邻递增子数组I(分组循环)
+
+```cpp
+class Solution {
+public:
+    bool hasIncreasingSubarrays(vector<int>& nums, int k) {
+        int ans = 0, n = nums.size(), cnt = 0, pre_cnt = 0;
+        for(int i = 0; i < n; i++) {
+            cnt++;
+            if(i == n-1 || nums[i] >= nums[i+1]) {
+                if(cnt/2 >= k || min(pre_cnt, cnt) >= k) return true;
+                pre_cnt = cnt;
+                cnt = 0;
+            }
+        }
+        return false;
+    }
+};
+```
+
+
+
+#### 检测相邻递增子数组II(分组循环、二分)
+
+```cpp
+class Solution {
+public:
+    int maxIncreasingSubarrays(vector<int>& nums) {
+        int ans = 0, cnt = 0, pre_cnt = 0, n = nums.size();
+        for(int i = 0; i < n; i++) {
+            cnt++;
+            if(i == n-1 || nums[i] >= nums[i+1]) {
+                ans = max({ans, cnt/2, min(pre_cnt, cnt)});
+                pre_cnt = cnt;
+                cnt = 0;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+分组循环要比二分快太多了，能在赛时手写一个二分答案
+
+
+
+###  周赛424
+
+#### 零数组变换II(二分答案、差分)
+
+```cpp
+class Solution {
+public:
+    int minZeroArray(vector<int>& nums, vector<vector<int>>& queries) {
+        int n = nums.size();
+        auto check = [&](int k) -> bool {
+            vector<int> diff(n+10);
+            for(int i = 0; i < k; i++) {
+                auto& q = queries[i];
+                diff[q[0]] += q[2];
+                diff[q[1]+1] -= q[2];
+            }
+            int sum = 0;
+            for(int i = 0; i < n; i++) {
+                sum += diff[i];
+                if(sum < nums[i]) return false;
+            }
+            return true;
+        };
+
+        int l = -1, r = queries.size();
+        if(!check(r)) return -1;
+        while(l+1 < r) {
+            int m = l+(r-l)/2;
+            if(check(m)) r = m;
+            else l = m;
+        }
+        return r;
+    }
+};
+```
+
+赛时有想到二分答案，但是没有想下去，啊啊啊啊本来完全可以三题上大分的！然后第一题还wa了4发，我真的服了
+
+
+
+
+
 
 
 
@@ -2291,7 +2411,70 @@ void solve() {
 }
 ```
 
+###  周赛67
 
+####  B
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    while(n--) {
+        ll a, b, c, d;
+        cin >> a >> b >> c >> d;
+        cout << a-(b*c-1)/d << " ";
+    }
+}
+```
+
+周赛第二题，想多了，就把等式移过去就行。。。我还一直以为是我二分代码错了。。。
+
+
+
+#### C
+
+```cpp
+void solve() {
+    int n, c, ans = 0;
+    cin >> n >> c;
+    int len = log10(c)+1;
+    n -= len+2;
+    for(int a = 0; a <= c; a++) {
+        int b = c-a;
+        int la = a ? log10(a)+1 : 1;
+        int lb = b ? log10(b)+1 : 1;
+        if(la+lb != n) continue;
+        ans++;
+    }
+    cout << ans << "\n";
+}
+```
+
+好题，确实做不出，枚举a，b就确定下来了就为c-a，然后判断数位和是否相等即可，这里求数位个数挺巧妙的，用的一个log函数，码一下
+
+
+
+#### D
+
+```cpp
+void solve() {
+    int n, k;
+    cin >> n >> k;
+    if(n < k) puts("NO");
+    else if(n == k) {
+        cout << "YES\n";
+        for(int i = 1; i <= n; i++) cout << "0 ";
+    } else {
+        cout << "YES\n";
+        k++;
+        for(int i = 1; i <= k; i++) cout << (i&1) << " ";
+        int x = (k&1);
+        for(int i = k+1; i <= n; i++) cout << x << " ";
+    }
+}
+```
+
+构造题，赛时没想出来。。。理解题意了，但是好像不是自己理解的意思。。。
 
 
 
@@ -2821,6 +3004,114 @@ void solve() {
 
 
 
+###  ABC.379
+
+#### C
+
+```cpp
+void solve() {
+    ll n, m;
+    cin >> n >> m;
+    vector<pair<ll, ll>> xa(m);
+    for(int i = 0; i < m; i++) cin >> xa[i].first;
+    for(int i = 0; i < m; i++) cin >> xa[i].second;
+    sort(xa.begin(), xa.end());
+    ll cnt = 0, sum = 0;
+    for(int i = 0; i < m; i++) {
+        if(xa[i].first > cnt+1) {
+            puts("-1");
+            return;
+        }
+        cnt += xa[i].second;
+        sum += xa[i].first*xa[i].second;
+    }
+    if(n != cnt) {
+        puts("-1");
+        return;
+    }
+    cout << n*(n+1)/2-sum;
+}
+```
+
+$$
+\sum_{i=1}^n{|i-j|} = \sum_{i=1}^n{i}-\sum_{j=1}^n{j}
+$$
+
+求和符号可以拆开，这就是题解给出的delta的意思。
+
+
+
+#### D
+
+```cpp
+void solve() {
+    ll Q;
+    cin >> Q;
+    queue<ll> q;
+    ll tag = 0;
+    while(Q--) {
+        int k;
+        cin >> k;
+        if(k == 1) {
+            q.push(0-tag);
+        }
+        if(k == 2) {
+            ll t;
+            cin >> t;
+            tag += t;
+        }
+        if(k == 3) {
+            ll ans = 0, h;
+            cin >> h;
+            while(!q.empty() && q.front()+tag >= h) {
+                q.pop();
+                ans++;
+            }
+            cout << ans << "\n";
+        }
+    }
+}
+```
+
+考察数据结构队列，查看数据范围查询仅到2e5，而t和h的范围达到了1e9，那么我们考虑查询次数，用一个tag表示增加的长度，种植和取出花盆属于先进先出，很符合队列的特点
+
+
+
+### ABC.380
+
+#### D
+
+```cpp
+void solve() {
+    string s;
+    cin >> s;
+    int Q;
+    cin >> Q;
+    ll n = s.size(), k;
+    while(Q--) {
+        cin >> k;
+        ll t = k/n;
+        if(k%n) t++;    //有余数
+        t--;    //下标从0开始
+        // ll bit = __builtin_popcount(t);  //不建议这样写 t是long long 因此不适用
+        int bit = 0;
+        while(t) {
+            if(t&1) bit ^= 1;   //0表示偶 1表示奇
+            t >>= 1;
+        }
+        int i = (k-1)%n;
+        if(bit) cout << rev(s[i]) << " ";
+        else cout << s[i] << " ";
+    }
+}
+```
+
+关键是要想到二进制那一块去，也确实，这样倍增指数一定是2的倍数，然后就是要对应这个字符是第几个字符串上，然后通过这个序号求出是奇数个数1还是偶数个数1，奇数个数1就需要大小写反转，这里的i就是k相对于第一个字符串的位置，然后判断bit的奇偶性是否反转字符就行
+
+
+
+
+
 
 
 
@@ -2969,3 +3260,74 @@ void solve() {
 ```
 
 矩阵模拟，属于是环形矩阵的遍历方式，重要的地方在于下标的处理和循环数组t的使用
+
+
+
+### 987.div2
+
+#### C(构造)
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    if(n < 27 && n%2) {
+        cout << -1 << "\n";
+        return;
+    }
+    int cnt = 0, i = 1;
+    if(n%2) {
+        cout << "1 3 3 4 4 5 5 6 6 1 2 7 7 8 8 9 9 10 10 11 11 12 12 13 13 1 2 ";
+        cnt = 26, i = 28;
+    }
+    for(; i <= n; i++) {
+        cout << cnt/2+1  << " ";
+        cnt++;
+    }
+    cout << "\n";
+}
+```
+
+这出题只能说真的妙，构造题出的好的题真的太考验思维了，小于27的奇数都是-1没有合法的方案的，大于等于27的奇数
+
+
+
+### 988.div3
+
+#### D(优先队列)
+
+```cpp
+void solve() {
+    ll n, m, l;
+    cin >> n >> m >> l;
+    vector<pair<ll, ll>> a(n), b(m);
+    for(int i = 0; i < n; i++) {
+        cin >> a[i].first >> a[i].second;
+    }
+    for(int i = 0; i < m; i++) {
+        cin >> b[i].first >> b[i].second;
+    }
+
+    priority_queue<ll> pq;
+    ll j = 0, power = 0, ans = 0;
+    for(int i = 0; i < n; i++) {
+        while(j < m && a[i].first >= b[j].first) {
+            pq.push(b[j].second);
+            j++;
+        }
+        ll target = a[i].second-a[i].first;
+        while(power <= target && !pq.empty()) {
+            power += pq.top();
+            pq.pop();
+            ans++;
+        }
+        if(power <= target) {
+            cout << -1 << endl;
+            return;
+        }
+    }
+    cout << ans << endl;
+}
+```
+
+赛时也是想到了优先队列，但是没写出来！当时想的是枚举l，一看1e9肯定得超时了，所以就没去写了，当然优先队列的实现方式还是没有想到的，自己想的还是复杂了
