--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -1402,6 +1402,10 @@ for(auto ... : ...) {
 }
 ```
 
+理解：大致讲述的是连通块和连通块之间的关系，单个连通块通过根来确定，通常要以某个方式为基准(最小下标或最大下标之类的)
+
+
+
 
 
 ##  树状数组
@@ -1881,6 +1885,54 @@ func comb(n, k int) int {
 
 
 
+##  判断二分图
+
+**特点**
+
+划分成两个集合，适合用染色法来理解
+
+
+
+广搜写法(无向图)：
+
+```cpp
+class Solution {
+public:
+    bool possibleBipartition(int n, vector<vector<int>>& dislikes) {
+        vector<vector<int>> g(n+1);
+        for(auto& d : dislikes) {
+            g[d[0]].push_back(d[1]);
+            g[d[1]].push_back(d[0]);
+        }
+        vector<int> color(n+1, -1);
+        queue<int> q;
+        for(int i = 1; i <= n; i++) {
+            if(color[i] == -1) {
+                q.push(i);
+                color[i] = 0;
+                while(!q.empty()) {
+                    int x = q.front();
+                    q.pop();
+                    for(auto& y : g[x]) {
+                        if(color[y] == -1) {
+                            color[y] = 1^color[x];
+                            q.push(y);
+                        } else if(color[x] == color[y]) {
+                            return false;
+                        }
+                    }
+                }
+            }
+        }
+        return true;
+    }
+};
+```
+
+还是觉得二分图的广搜好写一点，深搜逻辑不是很好懂，感觉有点剪枝的感觉，而且无向图和有向图的深搜写法还不同，所以还是就写上广搜的板子吧。
+
+
+
 
 
 
@@ -1906,6 +1958,12 @@ func comb(n, k int) int {
 ###  遇事不决先排序
 
 当题中给出某些大小关系才能给出答案的字眼中，并且答案和顺序无关的时候可以先排序看看问题能不能变得简便很多
+
+
+
+### 贡献法
+
+这并没有模板，属于是思考问题的方向吧，通常在计数问题上有巧妙之处。就好比正常的计数逻辑，当数据范围扩大的时候正常的计数逻辑会超时，但是如果改变公式的顺序之类的话可能就会达到不一样的效果，通常叫做换个角度思考问题，灵神基本称之为横看成立侧成峰
 
 
 
