--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -2478,6 +2478,88 @@ void solve() {
 
 
 
+### 周赛68
+
+#### B(二维前缀和)
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<vector<int>> a(n+1, vector<int>(m+1));
+    for(int i = 1; i <= n; i++) {
+        for(int j = 1; j <= m; j++) {
+            char c;
+            cin >> c;
+            a[i][j] = c == '*';
+        }
+    }
+    vector<vector<int>> pre(n+1, vector<int>(m+1));
+    for(int i = 1; i <= n; i++) {
+        for(int j = 1; j <= m; j++) {
+            pre[i][j] = pre[i-1][j]+pre[i][j-1]+a[i][j]-pre[i-1][j-1];
+        }
+    }
+    int x1 = 0, y1 = 0, x2 = 0, y2 = 0, mx = -1;
+    for(int i = 1; i <= n; i++) {
+        for(int j = 1; j <= m; j++) {
+            for(int k = i; k <= n; k++) {
+                for(int l = j; l <= m; l++) {
+                    if(0 == pre[k][l]-pre[k][j-1]-pre[i-1][l]+pre[i-1][j-1]) {
+                        if((k-i+1)*(l-j+1) > mx) {
+                            mx = (k-i+1)*(l-j+1);
+                            x1 = i, y1 = j, x2 = k, y2 = l;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    cout << x1 << " " << y1 << " " << x2 << " " << y2 << "\n";
+}
+```
+
+已经连续两周周赛做的一坨屎了，也确实出题出在了薄弱点上了，好好补题吧！二维前缀和也确实没有怎么刷过
+
+
+
+#### C
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    unordered_set<int> st1, st2;
+    for(int i = 0; i < n; i++) {
+        int a;
+        cin >> a;
+        st1.insert(a);
+    }
+    for(int i = 0; i < n; i++) {
+        int b;
+        cin >> b;
+        st2.insert(b);
+    }
+    int sza = st1.size(), szb = st2.size(), com = 0;
+    for(int x : st1) {
+        if(st2.count(x)) {
+            sza--, szb--, com++;
+        }
+        
+    }
+    while(com) {
+        if(sza >= szb) szb++;
+        else sza++;
+        com--;
+    }
+    cout << n-min(sza, szb) << endl;
+}
+```
+
+
+
+
+
 
 
 
